hard-gists/f53bb3e40edbceb38904/run.log
=== Docker Run Log for f53bb3e40edbceb38904 ===
Started at: Mi 29. Okt 21:27:17 CET 2025

[2025-10-29 21:27:17] START: Running container for f53bb3e40edbceb38904
[2025-10-29 21:27:18] SUCCESS: Container 2c9869eb2a81103be8bdec618c8ab59f80e23386c70bd08732c41938424fad9e started for f53bb3e40edbceb38904
=== Container logs for f53bb3e40edbceb38904 ===
  File "/snippet.py", line 126
    print "Sphere %d" % i
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f53bb3e40edbceb38904 ===
[2025-10-29 21:27:20] INFO: Container 2c9869eb2a81103be8bdec618c8ab59f80e23386c70bd08732c41938424fad9e has stopped
